[package]
name = "test_common"
version = "1.3.0"
authors = ["dante-signal31 <dante.signal31@gmail.com>"]
edition = "2018"
description = "Just an utility library with functionality I usually use in my unit tests and integration tests."
license-file = "LICENSE"
homepage = "https://github.com/dante-signal31/test_common"

[dependencies]
ring = "0.14.6"
tempfile = "3.0.8"
rand = "0.7.3"

[dev-dependencies]
tempfile = "3.0.8"
data-encoding = "2.1.2"
